wow. There were a debugger stiff floating around - Also, fix padding on mobile

--- a/css/overlay.css
+++ b/css/overlay.css
@@ -23,7 +23,7 @@
     padding: 20px;
 }
 
-@media (min-width: 40.0rem) {
+@media (min-width: 80.0rem) {
   #desc {
     padding: 0 300px;
   }
